kubernetes/apps/database/influxdb/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
  - port: 8086
    targetPort: 8086
    name: http
  selector:
    app: influxdb
  type: ClusterIP
